k8s/manifests/monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-issuer
spec:
  tls:
  - hosts:
    - grafana.p.i.psilva.org
    secretName: grafana-tls
  rules:
  - host: grafana.p.i.psilva.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
